overflow corrected

--- a/style.css
+++ b/style.css
@@ -17,8 +17,9 @@ body{
 }
 main{
     height: 100vh - 72px;
-    width: 100vw;
+    width: 100vw ;
     display: flex;
+   
 }
 .header{
     height:72px ;
@@ -47,9 +48,14 @@ main{
     font-weight: 500px;
     font-size: 16px;
      height: 24px;
-
+   
     color: #171725;
 }
+.header_content_list li a{
+    text-decoration: none;
+    color: #171725;
+}
+
 .header_logo{
  display: flex;
  justify-content: center;
@@ -120,7 +126,8 @@ main{
 }
 .left_navbar{
     height: calc(100vh - 72px);
-    width: 257px;
+    width: 300px;
+    flex: none;
     background-color: #f9f9f9;
     display: flex;
     flex-direction: column;
@@ -274,7 +281,8 @@ main{
 }
 .main_content{
     height: 100vh - 72px;
-    width: 100vw - 257px;
+    overflow: auto;
+    flex: 1;
 }
 .top_rated{
     margin-left: 32px;
